fixed footer items alignment

--- a/altru/css/altru.css
+++ b/altru/css/altru.css
@@ -1847,7 +1847,7 @@ body.home .section__body .site-menu.menu--body .logotype {
       flex: 1 0 50%;
       text-align: left; }
       .footer-column.footer-social {
-        flex: 1 0 30%; } }
+        flex: 1 0 auto; } }
 
 .footer-nav {
   display: flex;
