--- a/assets/css/sass/views/_footer.scss
+++ b/assets/css/sass/views/_footer.scss
@@ -36,7 +36,7 @@
         flex: 1 0 50%;
         text-align: left;
         &.footer-social {
-            flex: 1 0 30%;
+            flex: 1 0 auto;
         }
     }
 }
